@@ -48,6 +48,8 @@ Trunk (unreleased changes)
    HADOOP-2320 Committed TestGet2 is managled (breaks build).
    HADOOP-2322 getRow(row, TS) client interface not properly connected
    HADOOP-2309 ConcurrentModificationException doing get of all region start keys
+   HADOOP-2321 TestScanner2 does not release resources which sometimes cause the
+               test to time out
 
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
